lab1/Test/L1-A-8-63.cmm
float ;
int ;
struct ROtspwMG7YZf2 m3MoKi7Yo [ 1997266015 ] 
;
int WVhTJUogmkK711sFOdus ( ) {
, }
struct OaveqXfOW {
  int k ;
  int C4V = pnK5BfMUvpgd || Qj1 >= ga3A1UBfV - qariK 
    / ef [ gTBuoyZCTX_J12hK = ajbL7a3f3U && z64 == XoI0T13IeVa 
    + o3VSODpc * XbSAgJA3n ( bv8K1Rt4 && MaY5Y6H0mWP_l 
    < eGNnGerezMULXLAyyKo ! + ( _yFpPgLqz8 ( i9FtiiQq98_7jL 
    , H7zsQl3n33ZUlf ) ) != - vNmtJh39dbbggRrP4L > 2130509754 
    . XeiX2LZN ) ] * - sBpgUrj7c1Hqg1R4tFk ( ) <= ! - 
    633507481.66431335 , K ;
};
int ;
int ;
int ;
int lqlS , u163zPxwJKhRE 

;
int ;
struct {
};
int ;
int ;
int ;
int ;
int OrrAZd02jRdZrL ( int ERwUwt55gk , int rU < ) {
  if ( piCEnzHNQkd1LaSyeD9k )   x ;
else   if ( Vr7AfCudzLh3rhKoF )   if ( h80_Bcgvs7ONOuG 
    )   sJX5FPYNzcWMTafrOAeR ;
else   while ( e6Y03OyazNC2C4 ) {
    return Bn7UTMaXf9OLO ;
  }



}
int ;
( else 